--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,9 @@ ul {
 li {
   margin-top: 1rem;
 }
+input,
+select,
+textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
@@ -73,7 +76,9 @@ button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
-button:hover {
+input:hover,
+select:hover,
+textarea:hover button:hover {
   border: 0.1rem #404040 solid;
 }
 button.primary {
@@ -91,6 +96,14 @@ a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
+}
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
 }
 .row {
   display: flex;
